# quant-trader

./: .dockerignore  .env.example  .gitattributes  .gitignore  BACKLOG.md  CLAUDE.md  DEPLOY.md  DESIGN.md  Dockerfile  Dockerfile.batch  README.md  TODO.md  docker-compose.yml  project_flow.md  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt
aggregator/: candle.py
api/: auth_google.py  cache.py  main.py  security.py  stock_order_executor.py  telegram_bot.py  warmup.py
backtest/: README.md  __init__.py  account.py  backfill.py  backfill_daily.py  backfill_stock_daily.py  csv_to_clickhouse.py  datasource.py  engine.py  metrics.py  reeval_weights.py  report.py  run.py  strategy.py  toss_daily.py  upbit_candles.py  upbit_daily.py  walkforward.py
common/: cache.py  candle_chart.py  candles.py  clickhouse_client.py  config.py  constants.py  decision_writer.py  equity_chart_telegram.py  equity_series.py  equity_snapshot.py  http_client.py  ichimoku.py  kafka_client.py  kafka_watchdog.py  kis_account.py  kis_balance.py  kis_cancel.py  kis_chase.py  kis_client.py  kis_domestic_price.py  kis_order.py  kis_overseas_price.py  kiwoom_client.py  log.py  market_holidays.py  market_hours.py  migrations.py  notify_telegram.py  oauth_token.py  order_writer.py  postgres_client.py  rate_limit.py  schema_loader.py  schemas.py  stock_names.py  strategy_weights.py  symbol_chart.py  symbols.py  toss_client.py  toss_daily.py  (+3 more)
dashboard/: ch_browser.html  dashboard_preview.html
db/: clickhouse_schema.sql  clickhouse_system_logs.xml  postgres_repair.sql  (+1 more)
(+376 files in other folders)
