# 도구 설정 전용 — [project] 섹션 없음(pip 빌드에 영향 없음, requirements.txt 그대로 사용).
[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
# correctness 위주 — 미사용 import·미정의 이름·f-string 오류 등 실행을 깨뜨리는 문제만 게이트로 둔다.
# 자동 포맷/import 재정렬(E/W/I)·구문 현대화(UP)는 의도적 정렬을 보존하려 제외한다(대량 reformat 금지).
select = ["F", "E9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# 콘솔 스크립트 `pytest` 실행 시에도 리포 루트를 import 경로에 올린다.
pythonpath = ["."]

[tool.coverage.run]
# CI import 스윕 대상과 동일한 최상위 패키지만 측정(tests/·.venv 자동 제외).
source = ["api", "common", "streaming", "trading", "batch", "scripts"]
